--- a/src/main/resources/com/scrypt/scryptimplemenation/views/main.fxml
+++ b/src/main/resources/com/scrypt/scryptimplemenation/views/main.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -36,12 +35,18 @@
                 <Insets right="12.0" />
             </padding>
         </HBox>
-        <ImageView fx:id="scryptImage" fitHeight="71.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="scryptImage" fitHeight="57.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../assets/scrypt.png" />
             </image>
         </ImageView>
-        <Label fx:id="lab" alignment="CENTER" contentDisplay="CENTER" prefHeight="0.0" prefWidth="421.0" textAlignment="CENTER" />
+        <Label fx:id="lab" alignment="CENTER" contentDisplay="CENTER" prefHeight="0.0" prefWidth="421.0" textAlignment="CENTER">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" />
+         </padding></Label>
         <GridPane alignment="CENTER" hgap="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="700.0" vgap="10.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -59,36 +64,34 @@
             </rowConstraints>
             <children>
             <TextField fx:id="hashGeneratedField" onAction="#hashGeneratedFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="#hash generated" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
-            <TextField fx:id="passwordTextFieldUnlocked" onAction="#passwordTextFieldUnlockedClicked" prefHeight="38.0" prefWidth="148.0" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" />
-                <PasswordField id="passwordField" fx:id="passwordField" onAction="#passwordFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Password" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" />
+            <TextField fx:id="plaintextField" onAction="#plaintextFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Plaintext" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" />
                 <Button id="loginButton" fx:id="btnEncrypt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnEncryptClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Encrypt" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
                     <font>
                         <Font name="Arial Bold" size="9.0" />
                     </font></Button>
-                <ImageView fitHeight="68.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="68.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../assets/password.png" />
                     </image>
                     <GridPane.margin>
-                        <Insets bottom="70.0" left="72.0" right="70.0" top="79.0" />
+                        <Insets bottom="70.0" left="82.0" right="70.0" top="80.0" />
                     </GridPane.margin>
                 </ImageView>
-            <ImageView fitHeight="68.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+            <ImageView fitHeight="68.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                <image>
                   <Image url="@../assets/hashtodecrypt.png" />
                </image>
                <GridPane.margin>
-                  <Insets bottom="85.0" left="72.0" right="70.0" top="79.0" />
+                  <Insets bottom="85.0" left="85.0" right="70.0" top="85.0" />
                </GridPane.margin>
             </ImageView>
-            <TextField fx:id="passwordCheckTextFieldUnlocked" onAction="#passwordCheckTextFieldUnlockedClicked" prefHeight="38.0" prefWidth="148.0" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-            <PasswordField id="hashPasswordView" fx:id="passwordCheckField" accessibleRole="TEXT_AREA" onAction="#passwordCheckFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Password for check" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-            <ImageView fitHeight="68.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+            <TextField fx:id="plaintextCheckField" onAction="#plaintextCheckFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Plaintext for check" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+            <ImageView fitHeight="60.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
                <image>
                   <Image url="@../assets/hash.png" />
                </image>
                <GridPane.margin>
-                  <Insets bottom="85.0" left="72.0" right="70.0" top="79.0" />
+                  <Insets bottom="85.0" left="82.0" right="70.0" top="79.0" />
                </GridPane.margin>
             </ImageView>
             <Button id="loginButton" fx:id="btnCheck" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCheckClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Check" textFill="WHITE" GridPane.columnIndex="4" GridPane.rowIndex="2">
@@ -96,45 +99,13 @@
                   <Font name="Arial Bold" size="9.0" />
                </font>
             </Button>
-            <ImageView fitHeight="68.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+            <TextField fx:id="booleanResultField" alignment="CENTER" editable="false" onAction="#booleanResultFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="Status" styleClass="status-idle" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ImageView fitHeight="68.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
                <image>
                   <Image url="@../assets/password.png" />
                </image>
                <GridPane.margin>
-                  <Insets bottom="70.0" left="72.0" right="70.0" top="79.0" />
-               </GridPane.margin>
-            </ImageView>
-            <TextField fx:id="booleanResultField" alignment="CENTER" onAction="#booleanResultFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="Status" styleClass="control-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ImageView fx:id="imgEyeForPassword" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgEyeForPasswordClicked" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
-               <image>
-                  <Image url="@../assets/eye.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="72.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="imgEyeForPasswordCheck" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgEyeForPasswordCheckClicked" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../assets/eye.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="72.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="imgEyeHideForPassword" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgEyeHideForPasswordClicked" pickOnBounds="true" preserveRatio="true" visible="false" GridPane.columnIndex="3">
-               <image>
-                  <Image url="@../assets/eyehide.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="72.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="imgEyeHideForPasswordCheck" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgEyeHideForPasswordCheckClicked" pickOnBounds="true" preserveRatio="true" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../assets/eyehide.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="72.0" />
+                  <Insets left="82.0" top="5.0" />
                </GridPane.margin>
             </ImageView>
             </children>
