--- a/src/main/resources/com/scrypt/scryptimplemenation/views/main.fxml
+++ b/src/main/resources/com/scrypt/scryptimplemenation/views/main.fxml
@@ -58,14 +58,15 @@
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-            <TextField fx:id="hashGeneratedField" onAction="#hashGeneratedFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="#hash generated" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+            <TextField fx:id="hashGeneratedField" onAction="#hashGeneratedFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="#hash generated" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="2" />
             <TextField fx:id="plaintextField" onAction="#plaintextFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Plaintext" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" />
-                <Button id="loginButton" fx:id="btnEncrypt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnEncryptClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Encrypt" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
+                <Button id="loginButton" fx:id="btnEncrypt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnGenerateClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Generate" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
                     <font>
                         <Font name="Arial Bold" size="9.0" />
                     </font></Button>
@@ -77,7 +78,7 @@
                         <Insets bottom="70.0" left="82.0" right="70.0" top="80.0" />
                     </GridPane.margin>
                 </ImageView>
-            <ImageView fitHeight="68.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+            <ImageView fitHeight="68.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
                <image>
                   <Image url="@../assets/hashtodecrypt.png" />
                </image>
@@ -85,8 +86,8 @@
                   <Insets bottom="85.0" left="85.0" right="70.0" top="85.0" />
                </GridPane.margin>
             </ImageView>
-            <TextField fx:id="plaintextCheckField" onAction="#plaintextCheckFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Plaintext for check" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-            <ImageView fitHeight="60.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+            <TextField fx:id="plaintextCheckField" onAction="#plaintextCheckFieldClicked" prefHeight="38.0" prefWidth="148.0" promptText="Plaintext for check" styleClass="control-field" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <ImageView fitHeight="60.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
                <image>
                   <Image url="@../assets/hash.png" />
                </image>
@@ -94,18 +95,53 @@
                   <Insets bottom="85.0" left="82.0" right="70.0" top="79.0" />
                </GridPane.margin>
             </ImageView>
-            <Button id="loginButton" fx:id="btnCheck" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCheckClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Check" textFill="WHITE" GridPane.columnIndex="4" GridPane.rowIndex="2">
+            <Button id="loginButton" fx:id="btnCheck" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCheckClicked" prefHeight="42.0" prefWidth="163.0" styleClass="loginButton" stylesheets="@../styles/main.css" text="Check" textFill="WHITE" GridPane.columnIndex="4" GridPane.rowIndex="3">
                <font>
                   <Font name="Arial Bold" size="9.0" />
                </font>
             </Button>
-            <TextField fx:id="booleanResultField" alignment="CENTER" editable="false" onAction="#booleanResultFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="Status" styleClass="status-idle" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ImageView fitHeight="68.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+            <TextField fx:id="booleanResultField" alignment="CENTER" editable="false" onAction="#booleanResultFieldClicked" prefHeight="39.0" prefWidth="104.0" promptText="Status" styleClass="status-idle" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ImageView fitHeight="68.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
                <image>
                   <Image url="@../assets/password.png" />
                </image>
                <GridPane.margin>
                   <Insets left="82.0" top="5.0" />
+               </GridPane.margin>
+            </ImageView>
+            <TextField fx:id="nField" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="44.0" styleClass="control-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="N" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets left="72.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="rField" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="44.0" styleClass="control-field" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="R" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="72.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="pField" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="44.0" styleClass="control-field" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="P" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="72.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <ImageView fitHeight="50.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@../assets/parameters.png" />
+               </image>
+               <GridPane.margin>
+                  <Insets bottom="82.0" left="86.0" right="70.0" top="80.0" />
                </GridPane.margin>
             </ImageView>
             </children>
